--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Marvel information portal"
-    />
+      content="Marvel information portal"/>
     <title>Marvel information portal</title>
   </head>
   <body>
